[tool.poetry]
name = "ggv2provisioner"
version = "0.1.0"
description = "AWS IoT Greengrass core software installation and provisioning tool"
authors = ["Gavin Adams <gavinaws@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
